--- a/client/src/pages/Orders/orders.scss
+++ b/client/src/pages/Orders/orders.scss
@@ -2,8 +2,10 @@
   display: flex;
   width: 100%;
   background: #f7f7f7;
+
   .orderContainer {
-    .listContainer {
+    flex: 6;
+    .orderlist {
       padding: 0.8em;
       margin: 0.8em;
       border-radius: 10px;
