--- a/client/src/components/Table/order.scss
+++ b/client/src/components/Table/order.scss
@@ -1,30 +1,14 @@
-.product {
+.order {
   height: 100vh;
-  padding: 1em;
-  margin: 1em;
-  background: #f7f7f7;
-
-  -webkit-box-shadow: 2px 4px 10px rgba(172, 172, 172, 0.37);
-  box-shadow: 2px 4px 10px rgba(172, 172, 172, 0.404);
-  border-radius: 8px;
-  .productTitle {
-    width: 100%;
-    font-size: 1em;
-    color: #242a37;
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
 
   .cellWithImg {
     display: flex;
     align-items: center;
 
     .cellImg {
-      width: 2rem;
-      height: 2rem;
-      border-radius: 25px;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
       object-fit: cover;
       margin-right: 20px;
     }
@@ -44,7 +28,7 @@
     }
     &.passive {
       background-color: rgba(255, 0, 0, 0.05);
-      color: #ff2d55;
+      color: crimson;
     }
   }
 
@@ -53,19 +37,11 @@
     align-items: center;
     gap: 15px;
 
-    .viewButton {
-      padding: 2px 6px;
-      border-radius: 5px;
-      color: #f9c678;
-      border: 1px solid #f9c678;
-      cursor: pointer;
-    }
-
     .deleteButton {
       padding: 2px 5px;
       border-radius: 5px;
       color: #ff2d55;
-      border: 1px solid rgba(220, 20, 60, 0.6);
+      border: 1px solid #ff2d55;
       cursor: pointer;
     }
   }
