--- a/client/src/pages/Orders/orders.scss
+++ b/client/src/pages/Orders/orders.scss
@@ -1,4 +1,4 @@
-.order {
+.orders {
   display: flex;
   width: 100%;
   background: #f7f7f7;
@@ -6,13 +6,13 @@
   .orderContainer {
     flex: 6;
     .orderlist {
-      padding: 0.8em;
-      margin: 0.8em;
+      padding: 1em;
+      margin: 1em;
       border-radius: 10px;
       -webkit-box-shadow: 2px 4px 10px rgba(172, 172, 172, 0.37);
       box-shadow: 2px 4px 10px rgba(172, 172, 172, 0.404);
       .listTitle {
-        font-size: 0.8rem;
+        font-size: 1em;
         font-weight: 500;
         color: #242a37;
         margin-bottom: 0.6em;
