--- a/client/src/pages/update/update.scss
+++ b/client/src/pages/update/update.scss
@@ -42,7 +42,7 @@
       .right {
         flex: 2;
         margin-top: 2.5em;
-        form {
+        .form1 {
           display: flex;
           flex-wrap: wrap;
           gap: 1.5em;
@@ -50,6 +50,7 @@
 
           .formInput {
             width: 40%;
+
             &:nth-child(1) {
               margin: 0;
               padding: 0;
@@ -93,6 +94,60 @@
             font-weight: bold;
             cursor: pointer;
             margin-top: 20px;
+          }
+        }
+        .form2 {
+          display: flex;
+          flex-direction: column;
+          flex-wrap: wrap;
+          gap: 1.5em;
+          justify-content: space-evenly;
+
+          .formInput {
+            width: 40%;
+
+            &:nth-child(1) {
+              margin: 0;
+              padding: 0;
+            }
+
+            label {
+              font-size: 1em;
+              font-weight: 300;
+              display: flex;
+              align-items: center;
+              gap: 10px;
+
+              .icon {
+                cursor: pointer;
+                font-size: 1.1em;
+              }
+            }
+
+            input {
+              width: 100%;
+              padding: 5px;
+              border-radius: 5px;
+              border: none;
+              border-bottom: 1px solid gray;
+              &::placeholder {
+                font-size: 0.8em;
+              }
+              &:focus {
+                outline: none;
+              }
+            }
+            button {
+              width: 150px;
+              padding: 10px;
+              border: none;
+              border-radius: 10px;
+              background-color: #f9c678;
+              color: white;
+              font-weight: bold;
+              cursor: pointer;
+              margin-top: 20px;
+            }
           }
         }
       }
