--- a/client/src/style/dark.scss
+++ b/client/src/style/dark.scss
@@ -77,14 +77,17 @@
     }
   }
 
-  .order {
-    background-color: rgb(0, 0, 0);
-    .listContainer {
+  .orders {
+    .orderContainer {
       box-shadow: 2px 4px 10px rgba(32, 32, 32, 0.651);
       .listTitle {
         color: #cecece;
       }
     }
+    background-color: rgb(0, 0, 0);
+  }
+  .order {
+    background-color: rgb(44, 44, 44);
   }
   .new {
     background-color: rgb(0, 0, 0);
