add admin page and edit orders

--- a/client/src/components/product/product.scss
+++ b/client/src/components/product/product.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   padding: 1em;
   margin: 1em;
-  background: #f7f7f7;
+  background: #fcfcfc;
 
   -webkit-box-shadow: 2px 4px 10px rgba(172, 172, 172, 0.37);
   box-shadow: 2px 4px 10px rgba(172, 172, 172, 0.404);
