--- a/client/src/pages/Single/single.scss
+++ b/client/src/pages/Single/single.scss
@@ -1,6 +1,7 @@
 .single {
   display: flex;
   width: 100%;
+  height: 100vh;
   .singleContainer {
     flex: 6;
 
@@ -48,6 +49,67 @@
             justify-content: space-evenly;
             align-items: flex-start;
             gap: 0.8em;
+            .itemtitle {
+              margin-top: 1em;
+              font-size: 1.5em;
+              color: #242a37;
+            }
+
+            .detailItem {
+              font-size: 14px;
+
+              .itemKey {
+                font-weight: bold;
+                color: rgb(94, 94, 94);
+                margin-right: 5px;
+              }
+
+              .itemValue {
+                font-weight: 300;
+              }
+            }
+          }
+        }
+      }
+
+      .admins {
+        height: 60vh;
+        flex: 1;
+        -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+        padding: 20px;
+        position: relative;
+        border-radius: 8px;
+
+        .editButton {
+          position: absolute;
+          top: 0;
+          right: 0;
+          padding: 10px 2em;
+          font-size: 12px;
+          color: #ffffff;
+          background-color: #ff2d53;
+          cursor: pointer;
+          border-radius: 18px 8px 0px 18px;
+        }
+
+        .item {
+          display: flex;
+          gap: 1em;
+
+          .itemImg {
+            width: 12rem;
+            height: 60vh;
+            border-radius: 8px;
+            object-fit: cover;
+          }
+
+          .details {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: flex-start;
+            gap: 0.8em;
             .itemTitle {
               margin-bottom: 10px;
               color: #555;
@@ -72,7 +134,9 @@
 
       .right {
         flex: 2;
-        border-radius: 10px;
+        .chart {
+          border-radius: 10px;
+        }
       }
     }
 
