--- a/client/src/style/dark.scss
+++ b/client/src/style/dark.scss
@@ -33,7 +33,9 @@
       }
     }
     .link {
-      color: #b4b4b4;
+      li {
+        color: #b4b4b4;
+      }
     }
     .img {
       box-shadow: 2px 4px 10px rgba(172, 172, 172, 0.288);
@@ -41,6 +43,7 @@
   }
 
   .featured {
+    border: 1px solid rgb(119, 118, 118);
     color: #b4b4b4;
     box-shadow: 2px 4px 10px rgba(37, 36, 36, 0.651);
     .top {
@@ -52,6 +55,7 @@
   }
 
   .widget {
+    border: 1px solid rgb(119, 118, 118);
     box-shadow: 2px 4px 10px rgba(37, 36, 36, 0.651);
     .left {
       .title {
@@ -65,6 +69,7 @@
   .datatable {
     box-shadow: 2px 4px 10px rgba(37, 36, 36, 0.651);
     background-color: rgb(44, 44, 44);
+    border: 1px solid rgb(119, 118, 118);
     .datatableTitle {
       color: #b4b4b4;
     }
@@ -72,6 +77,7 @@
   .product {
     box-shadow: 2px 4px 10px rgba(37, 36, 36, 0.651);
     background-color: rgb(44, 44, 44);
+    border: 1px solid rgb(119, 118, 118);
     .productTitle {
       color: #cecece;
     }
@@ -80,8 +86,11 @@
   .orders {
     .orderContainer {
       box-shadow: 2px 4px 10px rgba(32, 32, 32, 0.651);
-      .listTitle {
-        color: #cecece;
+      .orderlist {
+        border: 1px solid rgb(119, 118, 118);
+        .listTitle {
+          color: #cecece;
+        }
       }
     }
     background-color: rgb(0, 0, 0);
@@ -111,7 +120,12 @@
       }
     }
   }
-
+  .chart {
+    color: #ffffff;
+    border: 1px solid rgb(119, 118, 118);
+    border-radius: 10px;
+    box-shadow: 2px 4px 10px rgba(32, 32, 32, 0.651);
+  }
   .brandContainer {
     .imageList {
       color: #cecece;
@@ -122,5 +136,27 @@
     }
     background-color: #000;
     box-shadow: 2px 4px 10px rgba(32, 32, 32, 0.651);
+    border: 1px solid rgb(119, 118, 118);
+  }
+  .single {
+    background-color: #000;
+    .singleContainer {
+      .top {
+        .left,
+        .admins {
+          color: #ffffff;
+          border: 1px solid rgb(119, 118, 118);
+          background: rgba(0, 0, 0, 0.342);
+          box-shadow: 2px 4px 10px rgba(32, 32, 32, 0.651);
+          .details,
+          .itemdetails {
+            .itemtitle {
+              color: #ffffff;
+            }
+            color: #868383;
+          }
+        }
+      }
+    }
   }
 }
