--- a/client/src/pages/productList/productList.scss
+++ b/client/src/pages/productList/productList.scss
@@ -1,7 +1,8 @@
 .list {
-    display: flex;
-    width: 100%;
-    .listContainer {
-      flex: 6;
-    }
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  .listContainer {
+    flex: 6;
   }
+}
