--- a/client/src/style/dark.scss
+++ b/client/src/style/dark.scss
@@ -41,7 +41,9 @@
       box-shadow: 2px 4px 10px rgba(172, 172, 172, 0.288);
     }
   }
-
+  .new {
+    background-color: black;
+  }
   .featured {
     border: 1px solid rgb(119, 118, 118);
     color: #b4b4b4;
